crud de productos y documentación
